# Dynamic-Operator

./: .gitignore  DESIGN.md  PROGRESS.md  README.md
docs/: Data.md  GUIDE.md
plans/: detailed_plan.md  optimization_plan.md
src/: cholesky.cpp  cholesky_extreme.cpp  cholesky_npu.cpp  cholesky_numa.cpp  cholesky_omp.cpp  cholesky_optimized.cpp  cholesky_parallel.cpp  test_cholesky.cpp  test_npu_gemm.cpp  test_npu_gemm_fp16.cpp  test_npu_matmul.cpp  test_npu_simple.cpp
src/pass/: CMakeLists.txt  CholeskyOperatorPass.cpp
src/runtime/: runtime.cpp  runtime.h
